# include_directories(..)

add_executable(testSimpleTable testSimple.c)
add_executable(testMM testMM.c)
add_executable(testCMServer testCMServer.c)
add_executable(testCMClient testCMClient.c)
add_executable(testRPCServer_s testRPCServer_s.c)
add_executable(testRPCServer_c testRPCServer_c.c)
add_executable(testRPCClient testRPCClient.c)

target_link_libraries(testSimpleTable MyKV ssl ibverbs)
target_link_libraries(testMM MyKV ssl ibverbs)
target_link_libraries(testCMServer MyKV ssl ibverbs pthread)
target_link_libraries(testCMClient MyKV ssl ibverbs)
target_link_libraries(testRPCServer_s MyKV ssl ibverbs pthread)
target_link_libraries(testRPCServer_c MyKV ssl ibverbs pthread)
target_link_libraries(testRPCClient MyKV ssl ibverbs pthread)